start/Intro to Dicts/shortchangeval/t1.txt
  File "fixup.py", line 1
    data = dict(January=1200; April=900)
                            ^
SyntaxError: invalid syntax
